<resources>
    <string name="app_name">Reacher,J</string>
    <string name="description_areia_image">Scenic image of a sandy beach</string>
    <string name="logo">Logo</string>
    <string name="entrar">Entrar</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="botao_para_voltar_na_tela_anterior">Botao para voltar na tela anterior</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="ou">ou</string>
    <string name="n_o_possui_conta">Não possui conta?</string>
    <string name="login">Login</string>
    <string name="favoritos">Favoritos</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="sign_in">Sign In</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="conta_do_usuario">conta do usuario</string>
    <string name="fundo_dinamico">Fundo dinamico</string>
    <string name="hiudy_martinhago_carvalho">Hiudy Martinhago Carvalho</string>
    <string name="engenheiro_e_esportista_em_busca_de_novas_aventuras">Engenheiro e esportista em busca de novas aventuras</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="configuracoes">configuracoes</string>
    <string name="conta">Conta</string>
    <string name="configura_es">Configurações</string>
    <string name="configuraçoes">configuracoes</string>
    <string name="configuraçooes">configuracoes</string>
    <string name="historico">Historico</string>
    <string name="Conta">Conta</string>
    <string name="sign_out">Sign Out</string>
    <string name="termos_e_condi_es">Termos e Condições</string>
    <string name="pagamentos">Pagamentos</string>
    <string name="notifica_o">Notificação</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="todos">Todos</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="item_4">Item 4</string>
    <string name="item_5">Item 5</string>
    <string name="item_6">Item 6</string>
    <string name="por_do_sol">Por do Sol</string>
    <string name="caminhada">Caminhada</string>
    <string name="bicicleta">Bicicleta</string>
    <string name="corrida">Corrida</string>
    <string name="trilha">Trilha</string>
    <string name="nascer_do_sol">Nascer do Sol</string>
    <string name="come_ar">Começar</string>
    <string name="j_possui_conta">Já possui conta?</string>
    <string name="log_in">Log in</string>
    <string name="criar_nova_conta">Criar nova conta</string>


</resources>